5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1834_2604.log
== TEST (2019-07-01 22:46:57) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
b=zeros(a.shape[0], dtype=int)
for i in range(a.shape[0]):
	b[i]=sum(a[i,:])
print(b)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:47:47) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
for i in range(a.shape[0]):
	b[i]=sum(a[i,:])
print(b)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:48:34) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
for i in range(a.shape[0]):
	a=max(a[i,:])
print(a)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:50:13) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
for i in range(a.shape[0]):

print(max(a[:,i]))
-- ERROR:
File "XXXX", line 6
    print(max(a[:,i]))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:50:25) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
for i in range(a.shape[0]):
print(max(a[:,i]))
-- ERROR:
File "XXXX", line 5
    print(max(a[:,i]))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:51:07) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
for i in range(a.shape[0]):
	print(max(a[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:51:58) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
for i in range(a.shape[0]):
	print(max(a[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:52:21) 
-- CODE:
from numpy import*
from numpy.linalg import *
a=array(eval(input("vetor: ")))
for i in range(a.shape[0]):
	print(max(a[i,:]))
-- EXECUTION TIME:
1.06913
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
